Updated first review - Curia

--- a/_sass/minimal-mistakes.scss
+++ b/_sass/minimal-mistakes.scss
@@ -32,6 +32,7 @@
 
 /* Utility classes */
 @import "minimal-mistakes/utilities";
+@import "minimal-mistakes/starrating";
 
 /* Layout specific */
 @import "minimal-mistakes/page";
